Fixes to wrong color schemes.

--- a/assets/css/index-style.css
+++ b/assets/css/index-style.css
@@ -53,8 +53,8 @@ img {
 .main-button a {
   font-size: 14px;
   color: #fff;
-  background-color: var(--blau);
-  border: 1px solid var(--blau);
+  background-color: #7453fc;
+  border: 1px solid #7453fc;
   padding: 12px 30px;
   display: inline-block;
   border-radius: 25px;
@@ -68,7 +68,7 @@ img {
 
 .main-button a:hover {
   background-color: #fff;
-  color: var(--blau);
+  color: #7453fc;
   border: 1px solid #fff;
 }
 
@@ -182,7 +182,7 @@ Header Style
 */
 
 .background-header {
-  background-color: var(--blau) !important;
+  background-color: #5170ff !important;
   height: 70px!important;
   position: fixed!important;
   top: 0!important;
@@ -208,7 +208,7 @@ Header Style
   min-height: 80px;
   background: transparent;
   display: flex;
-  background-color: var(--blau);
+  background-color: #5170ff;
   padding: 15px 30px;
   border-radius: 50px;
   width: 90%;
@@ -384,7 +384,7 @@ Banner Style
 .main-banner .bg {
   width: 130vh;
   height: 90vh;
-  background: linear-gradient(to right, var(--blau), var(--lila));
+  background: linear-gradient(to right, #5170ff, #da57fa);
   margin-left: 100%;
 }
 
@@ -453,7 +453,7 @@ body {
 
 @media (max-width: 1000px) {
   .main-banner {  
-    background: linear-gradient(to right, var(--blau), var(--lila));
+    background: linear-gradient(to right, #5170ff, #da57fa);
     width: 100%;
   }
   
